# weather-analytics-dashboard

./: .gitignore  Historical Weather Data Dashboard.pptx  README.md  compose.yaml  dependencies.py  exceptions.py  main.py  pyproject.toml
backend/: compose.yaml  dependencies.py  exceptions.py  logger.py  main.py  pyproject.toml
backend/data/: example.json
backend/db/: logger.py
backend/db/migrations/: env.py
backend/db/tables/: views.py
backend/models/: constants.py  response.py
backend/repository/: __init__.py  date_repo.py  ingested_files_repo.py  location_repo.py  metrics_repo.py  process_file_repo.py
backend/routes/: __init__.py  dashboard.py
backend/services/: __init__.py  dashboard_service.py  date_service.py  ingestion_service.py  location_service.py  metrics_service.py  processing_service.py
db/: db.py
db/migrations/: env.py
db/migrations/versions/: 1434efc55816_date_dim_weather_metrics_table.py  172bf7bfe5fa_fixed_indexes_for_ingestion_table.py  28a816ffc097_seed_data.py  c8923043aabf_date_weather_metrics_table.py
db/tables/: config.py  weather_tables.py
frontend/: api_client.py  app.py  charts.py  components.py  config.py  dashboard.py  models.py  process_data.py  pyproject.toml
ingestion/: ingest.py  logger.py
models/: enums.py  location.py  response.py
repository/: __init__.py  ingested_files_repo.py  location_repo.py  process_file_repo.py
routes/: __init__.py  pipeline.py
services/: __init__.py  ingestion_service.py  location_service.py  processing_service.py
sql_scripts/: create.sql  queries.sql
(+5 files in other folders)
