[project]
name = "weather-analytics-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "urllib3>=2.7.0",
]
